with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 18.6

** Better "did you mean" suggestions
"Did you mean" suggestions now include all that are "similar enough," not only
those that have the same Damerau-Levenshtein distance as the best suggestion.

** East-const `_Atomic`
When in east-`const` mode, `_Atomic` is now also printed east.

** `_Atomic void` parameters
Such parameters are now also correctly flagged as illegal.


* Changes in Cdecl 18.5.1

** Added missing `all`
The help for the `show` command now includes the missing optional `all`
keyword.


* Changes in Cdecl 18.5

** `[[indeterminate]]`
Added support for C++26 `indeterminate` attribute.

** C++26 types
Added the predefined types `std::hazard_pointer`, `std::hive_limits`,
`std::rcu_domain`, `std::text_encoding`, `std::contracts::assertion_kind`,
`std::contracts::contract_violation`, `std::contracts::detection_mode`,
`std::contracts::evaluation_semantic`, `std::linalg::column_major_t`,
`std::linalg::explicit_diagonal_t`, `std::linalg::implicit_unit_diagonal_t`,
`std::linalg::lower_triangle_t`, `std::linalg::row_major_t`, and
`std::linalg::upper_triangle_t`.

** Fixed explanations of pointers/references with storage classes
Explanations of things like:

    cdecl> explain static int *p
    declare p as static pointer to integer

are now correct.


* Changes in Cdecl 18.4.2

** Fixed issue #38: Accumulating newlines in command-line history
A newline should be added to the command-line only _after_ it's been added to
the history.


* Changes in Cdecl 18.4.1

** readline.h & stdio.h fix
Compensating for the apparent fact that genuine GNU readline.h (wrongly)
requires a manual #include <stdio.h>.


* Changes in Cdecl 18.4

** C++26
Initial support for C++26 has been added, specifically `= delete("reason")` is
now supported.

However, since C++26 is (at least) 2 years away, the default language for C++