@@ -1,0 +1,6 @@
+EXPECTED_EXIT=0
+cdecl -bEL$LINENO -t <<END
+show all
+END
+
+# vim:set syntax=sh et sw=2 ts=2:
